Fix features (del overflow: hidden)

--- a/css/about.css
+++ b/css/about.css
@@ -850,7 +850,6 @@ main-fixed {
   padding-top: 50%;
   padding-bottom: 50%;
   object-fit: cover;
-  overflow: hidden;
 }
 .features__item-inner::after {
   content: "";
