--- a/scss/modules/_b-features.scss
+++ b/scss/modules/_b-features.scss
@@ -14,7 +14,6 @@
       padding-top: 50%;
       padding-bottom: 50%;
       object-fit: cover;
-      overflow: hidden;
 
       &::after {
         content: "";
